spring-error-usage/src/main/java/com/example/error/SpringErrorUsageApplication.java
package com.example.error;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringErrorUsageApplication {

    public static void main(String[] args) {
        SpringApplication.run(SpringErrorUsageApplication.class, args);
    }

}
